@@ -479,9 +479,10 @@ static MMDesc file_menu[] =
     { "open_source", MMPush, { gdbOpenSourceCB }},
     MMSep,
     { "print",       MMPush, { graphPrintCB }},
-    { "quickPrint",  MMPush, { graphQuickPrintCB }},
+    { "printAgain",  MMPush, { graphQuickPrintCB }},
     MMSep,
-    { "make",        MMPush, { gdbCommandCB, "make" }},
+    { "make",        MMPush, { gdbMakeCB }},
+    { "makeAgain",   MMPush, { gdbMakeAgainCB }},
     MMSep,
     { "close",       MMPush, { DDDCloseCB }},
     { "restart",     MMPush, { DDDRestartCB }},
