@@ -73,6 +73,7 @@ DDD 2.1 [in beta test; scheduled for April, 1997]
       lets you select from all alternatives.
     - Buttons not supported on certain debuggers (for instance,
       `Finish' on DBX) are now made insensitive.  (optional)
+    - You can now invoke `make' from DDD, using an argument history.
     - You can search for keywords in the online DDD manual.
 
     Documentation:
